Archive2/b8/8d241a9bb5ce4f/output
main.cpp: In function 'int main()':
main.cpp:71:58: error: taking address of temporary [-fpermissive]
     void* base_as_pvoid = (void*)&static_cast<Base>(final);
                                                          ^
